--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="text-block">
                     <div class="text-content">
                         <div>
-                            <h6>Section</h6>
+                            <h6 style="float:left;">Section</h6>
                             <hr style="width:100%;">
                         </div>
                         <p>
@@ -105,8 +105,8 @@
                         <p>
                             Donec semper lobortis tincidunt. Donec eros leo, varius viverra lacus et, finibus sagittis risus. Donec nec feugiat leo, at suscipit libero. Aenean at sapien tempus, suscipit nisl congue, pulvinar quam. Donec ut congue eros. Morbi dapibus felis ut enim vulputate volutpat. Praesent nisi nunc, aliquet eget ante quis, interdum bibendum leo. Fusce auctor nisl quis odio vehicula mattis. Maecenas faucibus aliquam dolor, sed faucibus dolor molestie in. Sed viverra euismod fermentum. In gravida blandit est, sit amet ornare velit hendrerit nec. Fusce vitae tortor nec metus dapibus tempus ac ut elit. Maecenas vel leo in ante gravida vestibulum sed sit amet dui. Proin eget felis eu mauris lobortis bibendum. Mauris ac finibus augue. Maecenas rutrum, ante eu dictum cursus, est metus sollicitudin augue, volutpat congue sem metus at metus.
                         </p>
-                        <h6>Section 3</h6>
-                        <hr style="width:100%;">
+                            <h6 style="float:left;">Section 3</h6>
+                            <hr style="width:100%;">
                         <p>
                             Nunc congue id massa sit amet dictum. Suspendisse congue sodales viverra. Proin viverra in dui eu fermentum. Mauris sit amet risus nulla. Aliquam malesuada at ligula vitae hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed vehicula, metus ut malesuada scelerisque, eros nisl venenatis magna, malesuada iaculis mi orci sit amet risus. Maecenas imperdiet elementum metus ut imperdiet. Sed malesuada dictum leo a dictum. Donec lobortis ornare tellus, id aliquam metus iaculis vitae. Ut id egestas sapien, quis auctor dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac elit vel ex finibus bibendum sed et lectus. Duis efficitur vitae est quis bibendum.
                         </p>
